--- a/quizzes/templates/quizzes/base_quiz.html
+++ b/quizzes/templates/quizzes/base_quiz.html
@@ -334,7 +334,8 @@
             <div class="badge">Quiz</div>
             <div>
               <h1 id="quiz-title" class="title">
-                {% if quiz_attempt %} {{ quiz_attempt.subcategory.name }} {%else %} — {% endif %}
+                {% if quiz_attempt %} {{ quiz_attempt.subcategory.name }} {%else
+                %} — {% endif %}
               </h1>
 
               <p class="sub">
@@ -345,7 +346,8 @@
                 </strong>
                 · Question
                 <span id="meta-qno">{{ question_number|default:1 }}</span> of
-                <span id="meta-total">{{total_questions|default:quiz_attempt.total_questions}}</span
+                <span id="meta-total"
+                  >{{total_questions|default:quiz_attempt.total_questions}}</span
                 >
               </p>
             </div>
